        - Toggle transition tiles
        - Toggle gobs on/off
        - Nightvision
    - Settings should create automatically if the file doesn't exist, minor issues with loading fixed
    - Pushed GLSettings configurations to Settings
    - :gl commands are no longer a thing, use the options menu
    - Fixed mistake that would cause a gl error when deleting glPrograms since it was calling the wrong function
    - Pushed anisotropic validation off into TexGL
    - Added in pausing via 'p' key
    - Added back the "No Gob Audio" option under Audio Options.
    - Added back in the Grid mode via 'g' key
    - Added back flatworld, can be toggled in the Options window under Graphics.
    - Added back quick flower menus, can be toggled under Options window under Gameplay
    - Added back bugged flower menus (aka: don't close them when you click outside them). Options -> Gameplay
    - Added back simple crops. Options -> Gameplay
    - Added back showing of crop/tree/bush stage. Options -> Gameplay
    - Added back Showing of Gob HP. Options -> Gameplay
    - Added back tree scaling. Options -> Graphics
    - Added back in Gob and Animal paths. Options -> Gameplay
    - Added Camera settings to switch easily. Options -> Camera, also modified the maximum zoom out of ortho and speed of free cam
    - Added back Animal/Trough/Beehive radius. Options -> Gameplay
    - Added back the special menu when you alt + right click objects.
        - This will let you hide, add sound, or delete objects
    - Added in MenuGrid custom menus. Management windows are under the "Management" icon or 'm' key at the top level of menugrid
        - Under this is the Management icons for Hidden, Deleted, and Alerted items to see and modify (keys: 'h', 'd', 'a' respectively)
1.0.6
    - Added in Account management
    - Can now see how far you are from quests by looking at their tooltip when mousing over the pointer icon.
        - This is only accurate to within ~1000 tiles.